FIx: add spacing between contact and blog

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,6 +501,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.5rem 0;
 }
 
 .contact-content {
